# chatovod.py

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  README.rst  events.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: testapp.yml  workflow.yml
chatovod/: __init__.py
chatovod/api/: chat.py  endpoints.py  event_adapter.py  events.py  events_collection.py  http.py  internal.py  states.py
chatovod/core/: chat.py  client.py  client_user.py  errors.py  event_adapter.py  http.py
chatovod/structures/: abc.py  ban.py  chat.py  emoji.py  field.py  message.py  model.py  room.py  user.py
chatovod/util/: parsers.py
chatovod/utils/: parsers.py  time.py
tests/: pytest.ini
tests/api/: test_endpoints.py  test_event_adapter.py  test_events_collection.py  test_state.py
tests/utils/: test_ban_list_parser.py  test_parsers.py  test_time.py
