[tool.poetry]
name = "chatovod.py"
version = "0.1.0"
description = "Chatovod Python library for bot lovers."
authors = ["Henrique Torres <henriquetfw@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6.1"
aiohttp = "^3.6.2"
beautifulsoup4 = "^4.9.1"
yarl = "^1.4.2"

[tool.poetry.dev-dependencies]
# Coding style
black = "^19.10b0"
isort = "^4.3.21"

# Linter
flake8 = "^3.8.2"
flake8-isort = "^3.0.0"
flake8-broken-line = "^0.2.0"
flake8-builtins = "^1.5.3"
flake8-functions = "^0.0.4"
pydocstyle = "^5.0.2"

# Tests
pytest = "^5.4.2"
pytest-cov = "^2.9.0"

# Tools
tox = "^3.15.1"
pre-commit = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
