[metadata]
license_file = LICENSE

[flake8]
application-import-names = chatovod,tests
basepython = python3
exclude = .venv,.git,.tox,dist,doc,*egg,build
extend-ignore = E203
max-line-length = 88
show-source = true

[isort]
force_grid_wrap=0
include_trailing_comma = true
known_first_party = chatovod
known_third_party = aiohttp,bs4,pytest,setuptools,yarl
line_length=88
multi_line_output=3
use_parentheses=True
